Added prompts, added error message styling, refactored display_data so only series model calls this.

--- a/config/system.yml.example
+++ b/config/system.yml.example
@@ -5,3 +5,8 @@ services:
   bls:
     url: bls_url
     storage: path_to_storage
+mailer:
+  password: mailer_password
+trial:
+  scope_end: only_values_before_this_date
+
