--- a/config/bls/ce.yml
+++ b/config/bls/ce.yml
@@ -1801,19 +1801,19 @@ industry_code_to_name:
     '90932920': 'Local government general administration'
     '90932999': 'Other local government'
 datatype_to_internal_name:
-    '01': 'jobs-or-employees'
+    '01': 'jobs_or_employees'
     '02': 'hours'
-    '03': 'nominal-us-dollars'
+    '03': 'nominal_us_dollars'
     '04': 'hours'
-    '06': 'jobs-or-employees'
+    '06': 'jobs_or_employees'
     '07': 'hours'
-    '08': 'nominal-us-dollars'
+    '08': 'nominal_us_dollars'
     '09': 'hours'
-    '10': 'jobs-or-employees'
-    '11': 'nominal-us-dollars'
-    '12': 'real-us-dollars'
-    '13': 'real-us-dollars'
-    '15': 'nominal-us-dollars'
+    '10': 'jobs_or_employees'
+    '11': 'nominal_us_dollars'
+    '12': 'real_us_dollars'
+    '13': 'real_us_dollars'
+    '15': 'nominal_us_dollars'
     '16': 'indexes'
     '17': 'indexes'
     '19': 'hours'
@@ -1822,12 +1822,12 @@ datatype_to_internal_name:
     '22': 'indexes'
     '23': 'indexes'
     '24': 'indexes'
-    '25': 'jobs-or-employees'
+    '25': 'jobs_or_employees'
     '26': 'percent'
-    '30': 'nominal-us-dollars'
-    '31': 'real-us-dollars'
-    '32': 'real-us-dollars'
-    '33': 'nominal-us-dollars'
+    '30': 'nominal_us_dollars'
+    '31': 'real_us_dollars'
+    '32': 'real_us_dollars'
+    '33': 'nominal_us_dollars'
     '34': 'indexes'
     '35': 'indexes'
     '36': 'hours'
@@ -1835,49 +1835,49 @@ datatype_to_internal_name:
     '38': 'ratios'
     '39': 'ratios'
     '56': 'hours'
-    '57': 'jobs-or-employees'
+    '57': 'nominal_us_dollars'
     '58': 'hours'
     '81': 'hours'
-    '82': 'jobs-or-employees'
+    '82': 'nominal_us_dollars'
     '83': 'hours'
     '98': 'indexes'
     '99': 'indexes'
 industry_code_to_internal_name:
-    '0': 'all-industries'
-    '00000000': 'all-industries'
-    '05000000': 'all-private-industry'
-    '06000000': 'all-goods-producers'
-    '07000000': 'all-service-providers'
-    '08000000': 'private-service-providers'
-    '10000000': 'mining-quarrying-and-oil-and-gas-extraction'
+    '0': 'all_industries'
+    '00000000': 'all_industries'
+    '05000000': 'all_private_industry'
+    '06000000': 'all_goods_producers'
+    '07000000': 'all_service_providers'
+    '08000000': 'private_service_providers'
+    '10000000': 'mining_quarrying_and_oil_and_gas_extraction'
     '30000000': 'manufacturing'
-    '31000000': 'durable-goods'
-    '32000000': 'nondurable-goods'
-    '40000000': 'trade-transportation-and-utilities'
-    '42000000': 'retail-trade'
-    '43000000': 'transportation-and-warehousing'
-    '55000000': 'finance-and-insurance'
-    '60000000': 'professional-scientific-and-technical-services'
-    '65000000': 'not-elsewhere-classified'
-    '70000000': 'arts-entertainment-and-recreation'
-    '90000000': 'all-government'
-    '90910000': 'federal-government'
-    '90911000': 'federal-government-except-postal-service'
-    '90916220': 'federal-hospitals'
-    '90919110': 'department-of-defense'
-    '90919120': 'us-postal-service'
-    '90919999': 'not-elsewhere-classified'
-    '90920000': 'state-government'
-    '90921611': 'state-education'
-    '90922000': 'not-elsewhere-classified'
-    '90922622': 'state-hospitals'
-    '90922920': 'state-administration'
-    '90922999': 'not-elsewhere-classified'
-    '90930000': 'local-government'
-    '90931611': 'local-education'
-    '90932000': 'not-elsewhere-classified'
-    '90932221': 'local-utilities'
-    '90932480': 'local-transportation'
-    '90932622': 'local-hospitals'
-    '90932920': 'local-administration'
-    '90932999': 'not-elsewhere-classified'
+    '31000000': 'durable_goods'
+    '32000000': 'nondurable_goods'
+    '40000000': 'trade_transportation_and_utilities'
+    '42000000': 'retail_trade'
+    '43000000': 'transportation_and_warehousing'
+    '55000000': 'finance_and_insurance'
+    '60000000': 'professional_scientific_and_technical_services'
+    '65000000': 'not_elsewhere_classified'
+    '70000000': 'arts_entertainment_and_recreation'
+    '90000000': 'all_government'
+    '90910000': 'federal_government'
+    '90911000': 'federal_government_except_postal_service'
+    '90916220': 'federal_hospitals'
+    '90919110': 'department_of_defense'
+    '90919120': 'us_postal_service'
+    '90919999': 'not_elsewhere_classified'
+    '90920000': 'state_government'
+    '90921611': 'state_education'
+    '90922000': 'not_elsewhere_classified'
+    '90922622': 'state_hospitals'
+    '90922920': 'state_administration'
+    '90922999': 'not_elsewhere_classified'
+    '90930000': 'local_government'
+    '90931611': 'local_education'
+    '90932000': 'not_elsewhere_classified'
+    '90932221': 'local_utilities'
+    '90932480': 'local_transportation'
+    '90932622': 'local_hospitals'
+    '90932920': 'local_administration'
+    '90932999': 'not_elsewhere_classified'
